# BangTunes

./: .gitignore  =0.10.2  =2.0.1  Cargo.toml  LICENSE  README.md  bang_tunes.py  bangtunes.toml  debug_ytm.py  download_archive.txt  library.db  mypy.ini  panpipe_integration.py  player_integration.py  requirements-test.txt  requirements.txt  seed.csv  setup.sh
batches/: mix_001.csv  mix_002.csv  mix_003.csv
panpipe/: main.rs
panpipe/audio/: mod.rs  playlist.rs  scanner.rs  track.rs
panpipe/behavior/: mod.rs  tracker.rs
panpipe/spotify/: mod.rs
panpipe/ui/: mod.rs
src/: lib.rs  main.rs
src/audio/: metadata_parser.rs  mod.rs  player.rs  playlist.rs
src/behavior/: database.rs  mod.rs  weighting.rs
src/config/: mod.rs
src/export/: mod.rs
src/ui/: app.rs  components.rs  events.rs  mod.rs
tests/: test_smoke.py
